--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/sumu9897/frontendmentor-challenges" target="_blank">Mohammad Sumon</a>.
+    Coded by <a href="https://www.linkedin.com/in/md-sumon9897/" target="_blank">Mohammad Sumon</a>.
   </div>
 </body>
 </html>
